add map and styles

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 </select>
             </div>
             <div id="colour-map">
-                <img src="" alt="Colour Map" />
+                <img src="assets/world.svg" alt="Colour World Map" />
             </div>
             <!-- Modal for country information --> 
             <div id="country-modal" class="modal">
