add hidden modals

--- a/index.html
+++ b/index.html
@@ -989,14 +989,10 @@
                     <circle cx="1798.2" cy="719.3" id="2">
                     </circle>
 </svg>
-                </div>
-            <!-- Modal for country information --> 
-            <div id="country-modal" class="modal">
-                <div class="modal-content">
-                    <h3 id="country-name">Country Name</h3>
-                    <p id="colour-description">Description of the colour and its significance.</p>
-                </div>
             </div>
+            <!-- Hidden Modals for country information -->
+            <div id="hover-info" class="hover-info hidden"></div>
+            <div id="info-panel" class="info-panel hidden"></div>
         </section>
         
         </main>
