add country data object

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         <section id="map">
             <h2>Explore the Colour Map</h2>
             <p>Choose a colour and then click on the map to learn more about different colours and their significance in various cultures.</p>
+            <!-- Colour Picker -->
             <div id="colour-picker">
                 <label for="colour-select">Select a Colour:</label>
                 <select id="colour-select">
