add js functions to highlight countries from colour picker

--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <title>World of Colour</title>
     <link rel="stylesheet" href="css/style.css" />
-    <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Explore a world of colour at your fingertips with interactive features and engaging content." />
     <!-- Google fonts link -->
@@ -32,13 +31,13 @@
             <p>Choose a colour and then click on the map to learn more about different colours and their significance in various cultures.</p>
             <!-- Colour Picker -->
             <div id="colour-picker">
-                <label for="colour-select">Select a Colour:</label>
                 <select id="colour-select">
+                    <option value="">--Choose a colour--</option>
                     <option value="red">Red</option>
                     <option value="green">Green</option>
-                    <option value="blue">Blue</option>
                     <option value="yellow">Yellow</option>
-                </select>
+                    <option value="blue">Blue</option>
+                    </select>
             </div>
             <div id="colour-map">
                 <!-- <img src="assets/world.svg" alt="Colour World Map" /> -->
