--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
 
     <!-- Main content section --> 
     <main>
-        <div class="container-fluid px-3 px-md-5 py-4">
+        <div>
             <!-- introduction section -->
-            <section id="introduction" class="mb-4 mb-md-5">
+            <section id="introduction">
                 <h2>Welcome to the World of Colour</h2>
                 <p>Discover the beauty and diversity of colours through our interactive features and engaging content.</p>
             </section>
             <!-- Map section --> 
-            <section id="map" class="mb-4 mb-md-5">
+            <section id="map">
                 <h2>Explore the Colour Map</h2>
                 <p>Choose a colour and then click on the map to learn more about different colours and their significance in various cultures.</p>
                 <!-- Colour Picker -->
