add click hint to hover modal

--- a/index.html
+++ b/index.html
@@ -993,6 +993,7 @@
                 <div id="hover-info" class="hover-hidden">
                     <strong id="hover-country-name"></strong>
                     <p id="hover-country-meaning"></p>
+                    <small id="click-hint">Click for more info</small>
                 </div>
                 <!-- Click modal -->
                 <div id="info-module" class="info-hidden">
