--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="row min-vh-100">
     
             <!-- Left Column: Header + Introduction -->
-            <div class="col-md-4 flex-column p-4">
+            <div class="col-12 col-md-4 flex-column p-4">
             <!-- Header section -->   
             <header>
                 <h1 style="font-size:10rem;">World 
@@ -35,7 +35,7 @@
             </div>
 
             <!-- Right Column: Map -->
-            <div class="col-md-8 flex-column p-4">
+            <div class="col-12 col-md-8 flex-column p-4">
                 <!-- Map section --> 
                 <section id="map">
                     <h2>Explore the Colour Map</h2>
