optimise heading text

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
             <div class="col-12 col-md-4 flex-column p-4">
             <!-- Header section -->   
             <header>
-                <h1 style="font-size:10rem;">World 
-                <span style="font-size: 0.5em; vertical-align: middle;">of</span><br> 
+                <h1 class="main-title">World 
+                <span class="of-text">of</span><br> 
                 Colour
                 </h1>
             </header>
