--- a/index.html
+++ b/index.html
@@ -19,19 +19,19 @@
     
             <!-- Left Column: Header + Introduction -->
             <div class="col-12 col-md-4 flex-column p-4">
-            <!-- Header section -->   
-            <header>
-                <h1 class="main-title">World 
-                <span class="of-text">of</span><br> 
-                Colour
-                </h1>
-            </header>
+                <!-- Header section -->   
+                <header>
+                    <h1 class="main-title">World 
+                    <span class="of-text">of</span><br> 
+                    Colour
+                    </h1>
+                </header>
 
-            <!-- Introduction section -->
-            <section id="introduction">
-                <h2>Welcome to the World of Colour</h2>
-                <p>Discover the beauty and diversity of colours throughout the world.</p>
-            </section>
+                <!-- Introduction section -->
+                <section id="introduction">
+                    <h2>Welcome to the World of Colour</h2>
+                    <p>Discover the beauty and diversity of colours throughout the world.</p>
+                </section>
             </div>
 
             <!-- Right Column: Map -->
@@ -42,7 +42,7 @@
                     <p>Choose a colour and then click on the map to learn more about different colours and their significance in various cultures.</p>
 
                     <!-- Colour Picker -->
-                    <div id="colour-picker" class="mb-3">
+                    <div id="colour-picker" class="mb-5 mt-5">
                     <select id="colour-select" class="form-select w-auto">
                         <option value="">--Choose a colour--</option>
                         <option value="red">Red</option>
@@ -53,7 +53,7 @@
                     </div>
                 
                         <!-- Colour Map SVG -->
-                    <div id="colour-map">
+                    <div id="colour-map" class="mb-5">
                         <svg baseProfile="tiny" fill="#ececec" height="857" stroke="black" stroke-linecap="round" stroke-linejoin="round" stroke-width=".2" version="1.2" viewBox="0 0 2000 857" width="2000" xmlns="http://www.w3.org/2000/svg" id="demo-tiger"> 
                                 <path d="M1383 261.6l1.5 1.8-2.9 0.8-2.4 1.1-5.9 0.8-5.3 1.3-2.4 2.8 1.9 2.7 1.4 3.2-2 2.7 0.8 2.5-0.9 2.3-5.2-0.2 3.1 4.2-3.1 1.7-1.4 3.8 1.1 3.9-1.8 1.8-2.1-0.6-4 0.9-0.2 1.7-4.1 0-2.3 3.7 0.8 5.4-6.6 2.7-3.9-0.6-0.9 1.4-3.4-0.8-5.3 1-9.6-3.3 3.9-5.8-1.1-4.1-4.3-1.1-1.2-4.1-2.7-5.1 1.6-3.5-2.5-1 0.5-4.7 0.6-8 5.9 2.5 3.9-0.9 0.4-2.9 4-0.9 2.6-2-0.2-5.1 4.2-1.3 0.3-2.2 2.9 1.7 1.6 0.2 3 0 4.3 1.4 1.8 0.7 3.4-2 2.1 1.2 0.9-2.9 3.2 0.1 0.6-0.9-0.2-2.6 1.7-2.2 3.3 1.4-0.1 2 1.7 0.3 0.9 5.4 2.7 2.1 1.5-1.4 2.2-0.6 2.5-2.9 3.8 0.5 5.4 0z" id="AF" name="Afghanistan">
                                 </path>
