add mobile styles

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="row min-vh-100">
     
             <!-- Left Column: Header + Introduction -->
-            <div class="col-12 col-md-4 flex-column p-4">
+            <div class="col-12 col-md-4 flex-column  pb-4 pt-4">
                 <!-- Header section -->   
                 <header>
                     <h1 class="main-title">World 
@@ -39,7 +39,7 @@
             </div>
 
             <!-- Right Column: Map -->
-            <div class="col-12 col-md-8 flex-column p-4">
+            <div class="col-12 col-md-8 flex-column pb-4 pt-4">
                 <!-- Map section --> 
                 <section id="map">
                     <h2>Explore the Colour Map</h2>
