style colour buttons

--- a/index.html
+++ b/index.html
@@ -46,20 +46,19 @@
                     <p>Choose a colour and then click on the map to learn more about different colours and their significance in various cultures.</p>
 
                     <!-- Colour Picker -->
-                    <div id="colour-select" class="mb-5 mt-5">
-                    <div id="colour-select" class="btn-group" role="group" aria-label="Colour picker">
-                    <input type="radio" class="btn-check" name="colour" id="red" autocomplete="off" value="red">
-                    <label class="btn btn-outline-danger" for="red">Red</label>
+                    <div id="colour-select" class="mb-5 mt-5 d-flex gap-2 flex-wrap justify-content-center">
+                        <input type="radio" class="btn-check btn-colour" name="colour" id="red" autocomplete="off" value="red">
+                        <label class="btn btn-outline-danger" for="red">Red</label>
 
-                    <input type="radio" class="btn-check" name="colour" id="green" autocomplete="off" value="green">
-                    <label class="btn btn-outline-success" for="green">Green</label>
+                        <input type="radio" class="btn-check btn-colour" name="colour" id="green" autocomplete="off" value="green">
+                        <label class="btn btn-outline-success" for="green">Green</label>
 
-                    <input type="radio" class="btn-check" name="colour" id="yellow" autocomplete="off" value="yellow">
-                    <label class="btn btn-outline-warning" for="yellow">Yellow</label>
+                        <input type="radio" class="btn-check btn-colour" name="colour" id="yellow" autocomplete="off" value="yellow">
+                        <label class="btn btn-outline-warning" for="yellow">Yellow</label>
 
-                    <input type="radio" class="btn-check" name="colour" id="blue" autocomplete="off" value="blue">
-                    <label class="btn btn-outline-primary" for="blue">Blue</label>
-                </div>
+                        <input type="radio" class="btn-check btn-colour" name="colour" id="blue" autocomplete="off" value="blue">
+                        <label class="btn btn-outline-primary" for="blue">Blue</label>
+                    </div>
                 
                     <!-- Colour Map SVG -->
                     <div id="colour-map" class="mb-5">
